<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    android:layout_marginBottom="6dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_template"
        android:layout_margin="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/card_background"
        tools:context=".PeopleDetails2">

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/person_id"
            android:id="@+id/person_id"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:text="@string/first_name"
            android:id="@+id/first_name"
            android:layout_below="@+id/person_id"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:text="@string/last_name"
            android:id="@+id/last_name"
            android:textSize="18sp"
            android:layout_alignTop="@+id/first_name"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/email"
            android:id="@+id/email"
            android:layout_marginTop="2dp"
            android:textSize="15sp"
            android:layout_below="@+id/last_name"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/country"
            android:id="@+id/country"
            android:layout_marginTop="2dp"
            android:textSize="15sp"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/company_name"
            android:id="@+id/company_name"
            android:textSize="15sp"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/country"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/credit_card"
            android:id="@+id/credit_card"
            android:layout_marginTop="2dp"
            android:textSize="15sp"
            android:layout_below="@+id/company_name"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
